# WHArmy_Builder

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt  main.cpp  units.cpp  units.h
builds/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
builds/backend/: Makefile  WHArmy_builder  cmake_install.cmake
resources/: units.json
